--- a/pkg/rest/server/controllers/controller.go.tmpl
+++ b/pkg/rest/server/controllers/controller.go.tmpl
@@ -8,30 +8,30 @@ import (
 	"net/http"
 )
 
-var userService = services.UserService{}
+var {{.ResourceNameSingular}}Service = services.{{.ResourceName}}Service{}
 
-func CreateUser(context *gin.Context) {
+func Create{{.ResourceName}}(context *gin.Context) {
 	// validate input
-	var input models.User
+	var input models.{{.ResourceName}}
 	if err := context.ShouldBindJSON(&input); err != nil {
 		log.Error(err)
 		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
 
-	// trigger user creation
-	if err := userService.CreateUser(input); err != nil {
+	// trigger {{.ResourceNameSingular}} creation
+	if err := {{.ResourceNameSingular}}Service.Create{{.ResourceName}}(input); err != nil {
 		log.Error(err)
 		context.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
 
-	context.JSON(http.StatusOK, gin.H{"message": "User created successfully"})
+	context.JSON(http.StatusOK, gin.H{"message": "{{.ResourceName}} created successfully"})
 }
 
-func UpdateUser(context *gin.Context) {
+func Update{{.ResourceName}}(context *gin.Context) {
 	// validate input
-	var input models.User
+	var input models.{{.ResourceName}}
 	if err := context.ShouldBindJSON(&input); err != nil {
 		log.Error(err)
 		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
@@ -40,69 +40,69 @@ func UpdateUser(context *gin.Context) {
 
 	id := context.Param("id")
 
-	// trigger user updation
-	if err := userService.UpdateUser(id, input); err != nil {
+	// trigger {{.ResourceNameSingular}} updation
+	if err := {{.ResourceNameSingular}}Service.Update{{.ResourceName}}(id, input); err != nil {
 		log.Error(err)
 		context.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
 
-	context.JSON(http.StatusOK, gin.H{"message": "User updated successfully"})
+	context.JSON(http.StatusOK, gin.H{"message": "{{.ResourceName}} updated successfully"})
 }
 
-func GetUser(context *gin.Context) {
+func Get{{.ResourceName}}(context *gin.Context) {
 	id := context.Param("id")
 
-	// trigger user fetching
-	user, err := userService.GetUser(id)
+	// trigger {{.ResourceNameSingular}} fetching
+	{{.ResourceNameSingular}}, err := {{.ResourceNameSingular}}Service.Get{{.ResourceName}}(id)
 	if err != nil {
 		log.Error(err)
 		context.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
 
-	context.JSON(http.StatusOK, user)
+	context.JSON(http.StatusOK, {{.ResourceNameSingular}})
 }
 
-func DeleteUser(context *gin.Context) {
+func Delete{{.ResourceName}}(context *gin.Context) {
 	id := context.Param("id")
 
-	// trigger user deletion
-	if err := userService.DeleteUser(id); err != nil {
+	// trigger {{.ResourceNameSingular}} deletion
+	if err := {{.ResourceNameSingular}}Service.Delete{{.ResourceName}}(id); err != nil {
 		log.Error(err)
 		context.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
 
 	context.JSON(http.StatusOK, gin.H{
-		"message": "User deleted successfully",
+		"message": "{{.ResourceName}} deleted successfully",
 	})
 }
 
-func ListUsers(context *gin.Context) {
-	// trigger all users fetching
-	users, err := userService.ListUsers()
+func List{{.ResourceName}}s(context *gin.Context) {
+	// trigger all {{.ResourceNamePlural}} fetching
+	{{.ResourceNamePlural}}, err := {{.ResourceNameSingular}}Service.List{{.ResourceName}}s()
 	if err != nil {
 		log.Error(err)
 		context.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
 
-	context.JSON(http.StatusOK, users)
+	context.JSON(http.StatusOK, {{.ResourceNamePlural}})
 }
 
-func PatchUser(context *gin.Context) {
+func Patch{{.ResourceName}}(context *gin.Context) {
 	context.JSON(http.StatusOK, gin.H{
 		"message": "PATCH",
 	})
 }
-func OptionsUser(context *gin.Context) {
+func Options{{.ResourceName}}(context *gin.Context) {
 	context.JSON(http.StatusOK, gin.H{
 		"message": "OPTIONS",
 	})
 }
 
-func HeadUser(context *gin.Context) {
+func Head{{.ResourceName}}(context *gin.Context) {
 	context.JSON(http.StatusOK, gin.H{
 		"message": "HEAD",
 	})
