--- a/pkg/rest/server/services/service.go.tmpl
+++ b/pkg/rest/server/services/service.go.tmpl
@@ -5,27 +5,27 @@ import (
 	"github.com/kube-tarian/compage-template-go/pkg/rest/server/models"
 )
 
-type UserService struct {
+type {{.ResourceName}}Service struct {
 }
 
-var userDao = daos.UserDao{}
+var {{.ResourceNameSingular}}Dao = daos.{{.ResourceName}}Dao{}
 
-func (userService *UserService) CreateUser(user models.User) error {
-	return userDao.CreateUser(user)
+func ({{.ResourceNameSingular}}Service *{{.ResourceName}}Service) Create{{.ResourceName}}({{.ResourceNameSingular}} models.{{.ResourceName}}) error {
+	return {{.ResourceNameSingular}}Dao.Create{{.ResourceName}}({{.ResourceNameSingular}})
 }
 
-func (userService *UserService) UpdateUser(id string, user models.User) error {
-	return userDao.UpdateUser(id, user)
+func ({{.ResourceNameSingular}}Service *{{.ResourceName}}Service) Update{{.ResourceName}}(id string, {{.ResourceNameSingular}} models.{{.ResourceName}}) error {
+	return {{.ResourceNameSingular}}Dao.Update{{.ResourceName}}(id, {{.ResourceNameSingular}})
 }
 
-func (userService *UserService) DeleteUser(id string) error {
-	return userDao.DeleteUser(id)
+func ({{.ResourceNameSingular}}Service *{{.ResourceName}}Service) Delete{{.ResourceName}}(id string) error {
+	return {{.ResourceNameSingular}}Dao.Delete{{.ResourceName}}(id)
 }
 
-func (userService *UserService) ListUsers() ([]models.User, error) {
-	return userDao.ListUsers()
+func ({{.ResourceNameSingular}}Service *{{.ResourceName}}Service) List{{.ResourceName}}s() ([]models.{{.ResourceName}}, error) {
+	return {{.ResourceNameSingular}}Dao.List{{.ResourceName}}s()
 }
 
-func (userService *UserService) GetUser(id string) (models.User, error) {
-	return userDao.GetUser(id)
+func ({{.ResourceNameSingular}}Service *{{.ResourceName}}Service) Get{{.ResourceName}}(id string) (models.{{.ResourceName}}, error) {
+	return {{.ResourceNameSingular}}Dao.Get{{.ResourceName}}(id)
 }
