added remaing placeholders

--- a/Dockerfile.tmpl
+++ b/Dockerfile.tmpl
@@ -25,7 +25,7 @@ FROM gcr.io/distroless/base-debian10 as production
 COPY --from=build /app/main /
 
 # Application port (optional)
-EXPOSE 8080
+EXPOSE {{.ServerPort}}
 
 # Container start command for production
 CMD ["/main"]
