--- a/pkg/rest/server/daos/dao.go.tmpl
+++ b/pkg/rest/server/daos/dao.go.tmpl
@@ -2,7 +2,7 @@ package daos
 
 import (
 	"errors"
-	"github.com/kube-tarian/compage-template-go/pkg/rest/server/models"
+	"github.com/{{.RepositoryName}}/{{.NodeName}}/pkg/rest/server/models"
 )
 
 var {{.ResourceNamePlural}} = make(map[string]models.{{.ResourceName}})
