--- a/pkg/rest/server/services/service.go.tmpl
+++ b/pkg/rest/server/services/service.go.tmpl
@@ -1,8 +1,8 @@
 package services
 
 import (
-	"github.com/kube-tarian/compage-template-go/pkg/rest/server/daos"
-	"github.com/kube-tarian/compage-template-go/pkg/rest/server/models"
+	"github.com/{{.RepositoryName}}/{{.NodeName}}/pkg/rest/server/daos"
+	"github.com/{{.RepositoryName}}/{{.NodeName}}/pkg/rest/server/models"
 )
 
 type {{.ResourceName}}Service struct {
