--- a/pkg/rest/client/client.go.tmpl
+++ b/pkg/rest/client/client.go.tmpl
@@ -6,7 +6,7 @@ import (
 )
 
 func execute() ([]byte, error) {
-	response, err := http.Get("http://localhost:8080/ping")
+	response, err := http.Get("{{.ClientServiceName}}:{{.ClientPort}}/ping")
 
 	if err != nil {
 		return nil, err
