--- a/pkg/rest/server/controllers/controller.go.tmpl
+++ b/pkg/rest/server/controllers/controller.go.tmpl
@@ -2,8 +2,8 @@ package controllers
 
 import (
 	"github.com/gin-gonic/gin"
-	"github.com/kube-tarian/compage-template-go/pkg/rest/server/models"
-	"github.com/kube-tarian/compage-template-go/pkg/rest/server/services"
+	"github.com/{{.RepositoryName}}/{{.NodeName}}/pkg/rest/server/models"
+	"github.com/{{.RepositoryName}}/{{.NodeName}}/pkg/rest/server/services"
 	log "github.com/sirupsen/logrus"
 	"net/http"
 )
