--- a/useful-commands.tmpl
+++ b/useful-commands.tmpl
@@ -1,3 +1,4 @@
+{{if .IsServer }}
 curl -X POST -d 'id=123&name=John&city=Pune'
 
 curl -X POST -H "Content-Type: application/json" \
@@ -21,3 +22,4 @@ http://localhost:8080/v1/users/123
 
 curl -X DELETE -H "Content-Type: application/json" \
 http://localhost:8080/v1/users/123
+{{end}}
