--- a/go.mod.tmpl
+++ b/go.mod.tmpl
@@ -2,6 +2,7 @@ module github.com/{{.RepositoryName}}/{{.NodeName}}
 
 go 1.19
 
+{{if .IsServer }}
 require (
 	github.com/gin-gonic/gin v1.8.1
 	github.com/prometheus/client_golang v1.13.0
@@ -50,3 +51,4 @@ require (
 	google.golang.org/protobuf v1.28.1 // indirect
 	gopkg.in/yaml.v2 v2.4.0 // indirect
 )
+{{end}}
