fixed missing username in go modules and k8s files

--- a/kubernetes/deployment.yaml.tmpl
+++ b/kubernetes/deployment.yaml.tmpl
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: {{.NodeName}}
-          image: mahendraintelops/{{.NodeName}}
+          image: {{.UserName}}/{{.RepositoryName}}/{{.NodeName}}
           imagePullPolicy: Always
        {{if .IsServer }}
           env:
