--- a/frameworks/go-gin-server/useful-commands.tmpl
+++ b/frameworks/go-gin-server/useful-commands.tmpl
@@ -1,4 +1,4 @@
-{{if .IsServer }}
+{{if .IsRestServer }}
 # sample Post curl command
 curl -X POST -H "Content-Type: application/json" \
 -d '{"id":"123","name": "John", "city": "Pune"}' \
