feat: added trivy based sbom generation actions

--- a/.github/workflows/release.yml.tmpl
+++ b/.github/workflows/release.yml.tmpl
@@ -11,11 +11,13 @@ env:
 jobs:
   push_to_registry:
     name: Build and push Docker image github container registry.
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     permissions:
       packages: write
       id-token: write
       contents: read
+      actions: read
+      security-events: write
     steps:
       - name: Set environment variable
         run: |
@@ -50,3 +52,11 @@ jobs:
         run: cosign verify ${{ env.REGISTRY }}/${{ github.repository }}/[[.NodeName]]:${{ env.RELEASE_VERSION }} --certificate-identity ${{ env.GH_URL }}/${{ github.repository }}/.github/workflows/[[.NodeName]]-release.yml@refs/tags/${{ env.RELEASE_VERSION }}  --certificate-oidc-issuer https://token.actions.githubusercontent.com
         env:
           COSIGN_EXPERIMENTAL: 1
+      - name: Run Trivy in GitHub SBOM mode and submit results to Dependency Graph
+        uses: aquasecurity/trivy-action@master
+        with:
+          scan-type: 'fs'
+          format: 'github'
+          output: 'dependency-results.sbom.json'
+          image-ref: '.'
+          github-pat: ${{ secrets.GH_TOKEN }} # or ${{ secrets.github_pat_name }} if you're using a PAT
