--- a/.github/workflows/ci.yml.tmpl
+++ b/.github/workflows/ci.yml.tmpl
@@ -12,7 +12,13 @@ env:
 
 jobs:
   build-and-test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
+    permissions:
+      packages: write
+      id-token: write
+      contents: read
+      actions: read
+      security-events: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -46,14 +52,28 @@ jobs:
           files: ./[[.NodeName]]/coverage.out
           flags: [[.NodeName]]
           token: ${{secrets.CODECOV_TOKEN}}
+      - name: Run Trivy vulnerability scanner in repo mode
+        uses: aquasecurity/trivy-action@master
+        with:
+          scan-type: 'fs'
+          ignore-unfixed: true
+          format: 'sarif'
+          output: 'trivy-results.sarif'
+          severity: 'CRITICAL'
+      - name: Upload Trivy scan results to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: 'trivy-results.sarif'
   publish-docker-image:
     if: gitHub.event_name != 'pull_request'
     needs: build-and-test
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     permissions:
       packages: write
       id-token: write
       contents: read
+      actions: read
+      security-events: write
     steps:
       - name: Checkout GitHub Action
         uses: actions/checkout@v3
@@ -100,3 +120,11 @@ jobs:
         run: cosign verify ${{ env.REGISTRY }}/${{ github.repository }}/[[.NodeName]]:${{ github.run_id }} --certificate-identity ${{ env.GH_URL }}/${{ github.repository }}/.github/workflows/[[.NodeName]]-ci.yml@refs/heads/main --certificate-oidc-issuer https://token.actions.githubusercontent.com
         env:
           COSIGN_EXPERIMENTAL: 1
+      - name: Run Trivy in GitHub SBOM mode and submit results to Dependency Graph
+        uses: aquasecurity/trivy-action@master
+        with:
+          scan-type: 'fs'
+          format: 'github'
+          output: 'dependency-results.sbom.json'
+          image-ref: '.'
+          github-pat: ${{ secrets.GH_TOKEN }}
