--- a/frameworks/go-gin-server/go.mod.tmpl
+++ b/frameworks/go-gin-server/go.mod.tmpl
@@ -4,6 +4,8 @@ go 1.19
 
 {{if .IsRestServer }}
 require (
+	github.com/go-sql-driver/mysql v1.7.1
+	github.com/mattn/go-sqlite3 v1.14.16
 	github.com/gin-gonic/gin v1.8.1
 	github.com/prometheus/client_golang v1.13.0
 	github.com/sinhashubham95/go-actuator v1.4.0
