enhancement: modified templates according to models

--- a/frameworks/go-grpc-server/pkg/grpc/server/models/models.go.tmpl
+++ b/frameworks/go-grpc-server/pkg/grpc/server/models/models.go.tmpl
@@ -1,1 +1,8 @@
 package models
+
+type {{.ResourceName}} struct {
+    Id string
+    {{range $k, $v := .Fields}}
+    {{$k}} {{$v}}
+    {{end}}
+}
