--- a/frameworks/go-grpc-server/pkg/grpc/server/models/models.go.tmpl
+++ b/frameworks/go-grpc-server/pkg/grpc/server/models/models.go.tmpl
@@ -3,6 +3,8 @@ package models
 type {{.ResourceName}} struct {
     Id string
     {{range $k, $v := .Fields}}
+    {{if eq $k "Id"}}
+    {{else}}
     {{$k}} {{$v}}
     {{end}}
 }
