refactor: template variables naming conventions fixed

--- a/frameworks/go-grpc-server/main.go.tmpl
+++ b/frameworks/go-grpc-server/main.go.tmpl
@@ -22,7 +22,7 @@ import (
 {{if .IsGRPCServer }}
 var (
 	host = "localhost"
-	port = "{{.gRPCServerPort}}"
+	port = "{{.GRPCServerPort}}"
 )
 {{end}}
 
